--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
     <p>Filling station queuing system by:
-        Matthew Olayinka Adeboye</p>
+        Mary</p>
     <app-gas-station></app-gas-station>
 </div>
